--- a/_posts/news/2025-11-03-שיחת-תחילת-זמן-חורף-מפי-הגה-צ-הרב-אבנר עפגין-שליט-א.md
+++ b/_posts/news/2025-11-03-שיחת-תחילת-זמן-חורף-מפי-הגה-צ-הרב-אבנר עפגין-שליט-א.md
@@ -1,5 +1,5 @@
 ---
-title: "שיחת תחילת זמן חורף מפי הגה\"צ הרב אבנר עפג'ין שליט\"א:"
+title: שיחת תחילת זמן חורף מפי הגה"צ הרב אבנר עפג'ין שליט"א
 date: 2025-11-03T14:59:00.000+02:00
 ---
 
